--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/exercises/logica-js-projeto_inicial/index.html"
+    "livePreview.defaultPreviewPath": "/exercises/logica-js-projeto_inicial/index.html",
+    "liveServer.settings.port": 5502
 }
